Tue Jun 29 19:39:59 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (is_ruby64): check
	  ruby binary is mswin64 or mingw64. [ruby-dev:41756]

Mon Jun 28 20:32:33 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (test_offset_vtbl): check
	  that Ruby is 32bit or 64bit binary in order to get correct offset
	  value. [ruby-dev:41741]

Mon Jun 28 21:56:14 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (rb_fd_resize, rb_fd_copy): avoid NULL dereference upon
	  failed realloc by using xrealloc instead of not realloc.  a patch
	  from Jim Meyering <meyering at redhat.com> in [ruby-core:30920]
	  [Bug #3489]

Thu Jul  1 16:26:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c (thread_start_func_1): don't call
	  native_thread_init_stack(th) on cygwin to avoid the segv
	  introduced by r27789. Cygwin's signal implementation is half
	  baked so USE_SIGNALSTACK is not defined and it needs another
	  treatment.

Thu Jul  1 13:00:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (test-knownbug): ignore known bugs.

Thu Jul  1 12:59:14 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rubygems/test_gem_activation.rb: comment out a test for WONTFIX
	  bug.

Mon Jun 28 22:14:22 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rdoc/test_rdoc_ri_driver.rb (TestRDocRIDriver#test_formatter):
	  fix a test accordingly to r28455.

Mon Jun 28 05:32:51 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/rdoc/ri/driver.rb (RDoc::RI::Driver#formatter): should use bs
	  format when stdout is piped.  [ruby-core:30734]

Mon Jun 28 03:12:03 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bootstraptest/test_class.rb: add a test for [ruby-core:30843].

Mon Jun 28 02:43:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* class.c (rb_mod_init_copy): when class is dup'ed, a metaclass of the
	  class should be attached to the dup'ed class, not the original
	  class.  [ruby-core:30843] [Bug #3461]
